--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@mantine/core": "7.15.2",
+    "@mantine/form": "^7.15.2",
     "@mantine/hooks": "7.15.2",
+    "@tabler/icons-react": "^3.26.0",
     "next": "15.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1"
